# RCal

./: .coverage  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PRD.md  README.md  SECURITY.md  backup_workspace.py  benchmark.py  demo.cast  main.py  pyproject.toml  qa.sh  rcal  requirements-dev.txt  test_main.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  release.yml
docs/: AI_REFERENCE_DOC.md  COMPLIANCE_AUDIT.md  COMPLIANCE_ZERO_REVENUE.md  OSS_RELEASE_CHECKLIST.md  REPO_HOUSEKEEPING.md  initial-prompt.md  rcal-demo.cast  walkthrough.md
scripts/: backup_workspace.py  benchmark.py
src/rcal/: main.py
tests/: test_main.py
